# xsetwacomgui

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  \  configure.py  imgui.ini  install.py  settings.json
cmake/: find_xrandr.cmake  find_xsetwacom.cmake  get_cpm.cmake
cmake/static_analyzers/: clang_tidy.cmake  cppcheck.cmake
documentation/: 01 - Loading on Boot.md  CLI.md
resources/languages/: en_us.json  pt_br.json  ru_ru.json
xsetwacomgui/: CMakeLists.txt
xsetwacomgui/include/xsetwacomgui/: CMakeLists.txt  Environment.hpp  Localisation.hpp  Monitor.hpp  Scaling.hpp  Settings.hpp  Widgets.hpp
xsetwacomgui/source/: AreaMapper.cpp  CMakeLists.txt  Environment.cpp  Localisation.cpp  Main.cpp  Monitor.cpp  Settings.cpp  Widgets.cpp
